# CBMMPy

./: .gitignore  2step_mm_example.py  README.md  cvx_biclustr.py  examples.py  main.py  requirements.txt  sylvester solver.py  testing.py
cbmmpy/: pyproject.toml  setup.py
cbmmpy/cbmmpy/: __init__.py  _cvxbc_loss.py  _cvxbc_solver.py  _functions.py  convex_biclustering.py  convex_biclustering_weights.py
cbmmpy/cpp/: CMakeLists.txt
cbmmpy/cpp/include/: convex_biclustering.h  cpp_functions.h  internal_0.h  internal_1.h  loss_function.h  optimization_constants.h  optimization_parameters.h  sylvester_solver.h  update.h
cbmmpy/cpp/src/: convex_biclustering.cpp  cpp_functions.cpp  internal_0.cpp  internal_1.cpp  loss_function.cpp  sylvester_solver.cpp  update.cpp  wrap_cpp_functions.cpp
