[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.13.6"]
build-backend = "setuptools.build_meta"

[project]
name = "cbmmpy"
version = "0.2"
description = "Convex biclustering"
authors = [{name = "Daniel Touw", email = "touw@ese.eur.nl"}]
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.2"
]
